--- a/src/config/dynamic-theme-fixes.config
+++ b/src/config/dynamic-theme-fixes.config
@@ -3151,6 +3151,27 @@ INVERT
 
 ================================
 
+deutschlandcard.de
+
+CSS
+.o-button.as-secondary, .o-button.as-secondary[disabled], 
+.o-link.as-neutral > .o-icon, .o-link.as-secondary > .o-icon,
+.o-user-transaction-booking .cell-number .point-bubble, 
+.l-style-primary{
+	color: #56246f !important;
+}
+.st1 {
+        fill: #56246f !important;
+}
+.o-button.as-outline-neutral {
+	border-color: #181a1b !important;
+}
+.c-partner-logos .partner-logos-items {
+	background-color: rgb(69, 29, 89);
+}
+
+================================
+
 dev.azure.com
 
 CSS
